Revert "Added bundle install to travis yml"
This reverts commit d465f4b5898d73348762d3a27bb8fd6bce41106e.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,6 @@ gemfile:
   - gemfiles/rails3.2.gemfile
   - gemfiles/rails4.0.gemfile
   - gemfiles/rails4.1.gemfile
-install:
-  - 'travis_retry bundle install'
 language:
   - ruby
-script: 'bundle exec rake spec'
+script: 'bundle exec rake test'
