--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,5 @@
-gemfile:
-  - gemfiles/rails3.2.gemfile
-  - gemfiles/rails4.0.gemfile
-  - gemfiles/rails4.1.gemfile
 install:
   - 'travis_retry bundle install'
 language:
   - ruby
-script: 'bundle exec rake spec'
+script: 'bundle exec rspec spec'
